--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^2.1.2",
+    "@rainbow-me/rainbowkit": "^1.3.6",
     "@tanstack/react-query": "^5.40.0",
     "ethers": "^6.12.1",
     "next": "^14.2.3",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "viem": "^2.13.3",
-    "wagmi": "^2.9.8"
+    "react-icons": "^5.2.1",
+    "viem": "~1.21.4",
+    "wagmi": "^1.4.13"
   },
   "devDependencies": {
     "@types/node": "^18.19.3",
