--- a/package.json
+++ b/package.json
@@ -1,40 +1,24 @@
 {
-  "name": "frontend",
+  "name": "rocketlend",
   "private": true,
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^1.3.6",
-    "@reduxjs/toolkit": "^2.2.5",
-    "@tanstack/react-query": "^5.40.0",
-    "canvas-confetti": "^1.9.3",
-    "ethers": "^6.12.1",
+    "@rainbow-me/rainbowkit": "^2.1.3",
+    "@tanstack/react-query": "^5.28.4",
     "next": "^14.2.3",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "react-icons": "^5.2.1",
-    "react-modal": "^3.16.1",
-    "react-redux": "^9.1.2",
-    "react-spinners": "^0.13.8",
-    "redux": "^5.0.1",
-    "viem": "~1.21.4",
-    "wagmi": "^1.4.13"
+    "viem": "2.9.31",
+    "wagmi": "^2.9.2"
   },
   "devDependencies": {
-    "@types/canvas-confetti": "^1.6.4",
     "@types/node": "^18.19.3",
     "@types/react": "^18.3.0",
-    "@types/react-modal": "^3.16.3",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.15.0",
-    "eslint-config-next": "^14.2.3",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
     "typescript": "5.4.2"
   }
 }
