--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/node": "^18.19.3",
     "@types/react": "^18.3.0",
+    "tailwindcss": "^3.4.7",
     "typescript": "5.4.2"
   }
 }
