--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.3",
     "@rainbow-me/rainbowkit": "^2.1.3",
     "@tanstack/react-query": "^5.28.4",
     "next": "^14.2.3",
