--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.3",
+    "@heroicons/react": "^2.1.5",
     "@rainbow-me/rainbowkit": "^2.1.3",
     "@tanstack/react-query": "^5.28.4",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.3.30",
     "next": "^14.2.3",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
@@ -23,7 +26,7 @@
     "@types/react": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.40",
-    "tailwindcss": "^3.4.7",
+    "tailwindcss": "^3.4.10",
     "typescript": "5.4.2"
   }
 }
