--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.28.4",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.30",
+    "luxon": "^3.5.0",
     "next": "^14.2.3",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
@@ -22,6 +23,7 @@
     "wagmi": "^2.9.2"
   },
   "devDependencies": {
+    "@types/luxon": "^3.4.2",
     "@types/node": "^18.19.3",
     "@types/react": "^18.3.0",
     "autoprefixer": "^10.4.19",
